<resources>
    <string name="app_name">Device Connect Manager</string>
    <string name="image_content_description">Image Description</string>
    <string name="affinity_launcher_activity" translatable="false">.launcher</string>
    <string name="activity_launch_button_launch">Launch</string>
    <string name="activity_launch_button_stop">Stop</string>
    <string name="activity_launch_button_cancel">Cancel</string>
    <string name="activity_launch_button_settings">Settings</string>
    <string name="activity_launch_message_waiting_for_initialization">Initializing system&#8230;</string>
    <string name="activity_launch_message_launch">Please click the below button\nto launch Device Connect Manager.</string>
    <string name="activity_launch_message_stop">Please click the below button\nto stop Device Connect Manager.</string>
    <string name="activity_settings_server_on_off">Device Connect Manager</string>
    <string name="activity_settings_observer">Monitoring Port</string>
    <string name="activity_settings_observer_summary">Notify the possibility that Manager will be spoofed if the port is used by other application.</string>
    <string name="activity_settings_allow_external_start_and_stop">Allow starting and stopping by external apps</string>
    <string name="activity_settings_allow_external_ip">Allow External IP</string>
    <string name="activity_settings_require_origin">Require Origin</string>
    <string name="activity_settings_require_origin_summary">Require applications to set Origin header to their requests.</string>
    <string name="activity_settings_server_keyword">Keyword</string>
    <string name="activity_settings_server_settings">Settings</string>
    <string name="activity_settings_dconnect_enabled">On</string>
    <string name="activity_settings_dconnect_disabled">Off</string>
    <string name="activity_settings_default_keyword"></string>
    <string name="activity_settings_keyword">Keyword</string>
    <string name="activity_settings_ssl">SSL</string>
    <string name="activity_settings_host">Host</string>
    <string name="activity_settings_port">Port</string>
    <string name="activity_settings_document_root">Document Root Path</string>
    <string name="activity_settings_default_host">localhost</string>
    <string name="activity_settings_default_port">4035</string>
    <string name="activity_settings_local_oauth">Local OAuth</string>
    <string name="activity_settings_local_oauth_summary">Authorize applications by user.</string>
    <string name="activity_settings_dconn_enabled">Enabled</string>
    <string name="activity_settings_dconn_disabled">Disabled</string>
    <string name="activity_settings_list_access_token_list">List of access token</string>
    <string name="activity_settings_terms_of_service">Terms of Service</string>
    <string name="activity_settings_privacy_policy">Privacy Policy</string>
    <string name="activity_settings_open_source_licenses">Open Source Licenses</string>
    <string name="activity_settings_open_source_licenses_summary">Legal information about licenses</string>
    <string name="activity_settings_app_infomation_summary">Version</string>
    <string name="activity_settings_about">About</string>
    <string name="activity_settings_general">General</string>
    <string name="activity_settings_not_logged_in">Not logged in yet</string>
    <string name="activity_settings_security">Security</string>
    <string name="activity_settings_allowlist">Allowlist</string>
    <string name="activity_settings_allowlist_enable">Enable origin blocking</string>
    <string name="activity_settings_allowlist_enable_summary">Block requests of applications that the origin is not included in allowlist.</string>
    <string name="activity_settings_manage_allowlist">Manage allowlist</string>
    <string name="activity_settings_accesslog">AccessLog</string>
    <string name="activity_settings_accesslog_title">AccessLog</string>
    <string name="activity_settings_accesslog_summary">Allow saving the access log in the DB.</string>
    <string name="activity_settings_accesslog_list">Mange AccessLog</string>
    <string name="activity_settings_device_plugin">Device Plug-in</string>
    <string name="activity_settings_list_device_plugin">List of device plug-in</string>
    <string name="activity_settings_restart_device_plugin">Restart all the devices plug-ins</string>
    <string name="activity_settings_restart_device_plugin_title">Starting Device Plug-in</string>
    <string name="activity_settings_restart_device_plugin_message">Processing</string>
    <string name="activity_settings_warning_require_origin_disabled">The below other settings will be turned OFF because these settings reffer origins of apps.\n\n%1$s\nIs it OK？</string>
    <string name="activity_settings_warning_require_origin_enabled">The below other settings will be turned ON because this setting reffers origins of apps.\n\n%1$s\nIs it OK？</string>
    <string name="activity_settings_warning">Warning</string>
    <string name="activity_settings_yes">Yes</string>
    <string name="activity_settings_no">No</string>
    <string name="activity_settings_close">Close</string>
    <string name="activity_settings_manager_terminate">Manager termination notification to all devices plug-ins</string>
    <string name="activity_settings_manager_terminate_title">Manager termination notification in to the device plug-ins</string>
    <string name="activity_settings_manager_terminate_message">Processing</string>
    <string name="activity_settings_manage_websocket">List of WebSocket</string>
    <string name="activity_settings_export_server_keystore">Exports server keystore</string>
    <string name="activity_settings_export_server_keystore_summay">Exports server keystore as a PKCS12 file.</string>
    <string name="activity_settings_export_server_keystore_dialog_path_title">Directory Path</string>
    <string name="activity_settings_export_server_keystore_dialog_button_export">Export</string>
    <string name="activity_settings_export_server_keystore_dialog_button_cancel">Cancel</string>
    <string name="activity_settings_export_server_keystore_success">Stored keystore</string>
    <string name="activity_settings_export_server_keystore_error">Failed to store keystore</string>
    <string name="activity_settings_install_server_certificate">Installs root certificate</string>
    <string name="activity_settings_install_server_certificate_summary">Install the root certificate of this system as a trusted certificate on your device.</string>
    <string name="activity_settings_name">Name</string>
    <string name="activity_settings_uuid">UUID</string>
    <string name="activity_settings_manager_name_visible">Show Manager\'s name</string>
    <string name="activity_settings_manager_name_visible_on"> name in Availability.</string>
    <string name="activity_settings_manager_name_visible_off">Do not show names in Availability.</string>
    <string name="activity_settings_availability_warning_message">Show the Manager\'s name with Availability API.\n\nBy http://localhost:4035/gotapi/availability,\n allows you to retrieve the Manager\'s name without a confirmation dialog.\n\nDo you may be enabled?</string>
    <string name="activity_settings_power_saving">Power Saving</string>
    <string name="activity_settings_doze_mode_title">Doze mode</string>
    <string name="activity_settings_doze_mode_summary_off">Battery optimization is disabled. It doesn\'t save battery power, because not change to doze mode.</string>
    <string name="activity_settings_doze_mode_summary_on">Battery optimization is enabled. This application will stop working because Doze mode will be restricted to save battery power.</string>
    <string name="activity_settings_wake_lock_title">WakeLock</string>
    <string name="activity_settings_wake_lock_summary_off">WakeLock is disabled.</string>
    <string name="activity_settings_wake_lock_summary_on">WakeLock is enabled.</string>
    <string name="activity_settings_web_server_settings">Setting of Web Server</string>
    <string name="activity_settings_web_server">Web Server</string>
    <string name="activity_settings_web_server_default_host">localhost</string>
    <string name="activity_settings_web_server_default_port">8080</string>
    <string name="activity_settings_web_server_document_root">Document Root Path</string>
    <string name="activity_settings_web_server_warning_title">Warning</string>
    <string name="activity_settings_web_server_warning_message">Start the web server.\n\nIf you enable this feature you can access from the outside to the file in the SD card.\n\nDo you may be enabled?</string>
    <string name="activity_settings_web_server_warning_positive">OK</string>
    <string name="activity_settings_web_server_warning_negative">Cancel</string>
    <string name="activity_settings_event_keep_alive_settings">Event Keep Alive</string>
    <string name="activity_settings_web_server_error_message">Failed to start the web server, because cannot get a permission.</string>
    <string name="activity_settings_web_server_error">Failed to start the web server.\n\n%1$s</string>
    <string name="activity_allowlist_title">Allowlist of Origin</string>
    <string name="no_origin">No allowed origin by user.</string>
    <string name="dialog_delete_origin_message">Are you sure you want to remove this origin from allowlist?</string>
    <string name="dialog_delete_origin_positive">Remove</string>
    <string name="dialog_delete_origin_negative">Cancel</string>
    <string name="menu_add_origin">Add</string>
    <string name="dialog_add_origin_title">Add an origin to be allowed</string>
    <string name="dialog_add_origin_positive">Add</string>
    <string name="dialog_add_origin_negative">Cancel</string>
    <string name="dialog_update_origin_title">Update this origin</string>
    <string name="dialog_update_origin_positive">Update</string>
    <string name="dialog_update_origin_negative">Cancel</string>
    <string name="dialog_origin_manual_entry_item_title">Title</string>
    <string name="dialog_origin_manual_entry_item_origin">Origin</string>
    <string name="dialog_origin_manual_entry_message">Please enter an origin at least.</string>
    <string name="activity_deviceplugin_info_restart">Restart</string>
    <string name="activity_deviceplugin_info_uninstall">Delete</string>
    <string name="activity_deviceplugin_info_settings">Settings</string>
    <string name="activity_deviceplugin_info_open_settings">Open settings</string>
    <string name="activity_deviceplugin_info_profile">Profile</string>
    <string name="activity_deviceplugin_info_connection_type_title">Connection Type</string>
    <string name="activity_deviceplugin_info_connection_type_unknown">Unknown</string>
    <string name="activity_deviceplugin_info_baud_rate">Baud Rate</string>
    <string name="activity_deviceplugin_info_average_baud_rate">Average Baud Rate</string>
    <string name="activity_deviceplugin_info_worst_request">Slowest Request</string>
    <string name="activity_deviceplugin_info_worst_baud_rate">Baud Rate</string>
    <string name="activity_deviceplugin_info_baud_rate_history">Baud Rate History</string>
    <string name="activity_service_menu_settings">Settings</string>
    <string name="activity_service_menu_help">Help</string>
    <string name="activity_accesslog_detail_request">Request</string>
    <string name="activity_accesslog_detail_response">Response</string>
    <string name="activity_accesslog_detail_request_time">Received Time</string>
    <string name="activity_accesslog_detail_request_ip_address">IP Address</string>
    <string name="activity_accesslog_detail_request_host_name">Host Name</string>
    <string name="activity_accesslog_detail_response_time">Send Time</string>
</resources>