<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/activity_settings_server_settings" >
        <EditTextPreference
            android:defaultValue="@string/activity_settings_default_host"
            android:key="@string/key_settings_dconn_host"
            android:summary="@string/activity_settings_default_host"
            android:title="@string/activity_settings_host" />
        <EditTextPreference
            android:defaultValue="@string/activity_settings_default_port"
            android:inputType="number"
            android:key="@string/key_settings_dconn_port"
            android:summary="@string/activity_settings_default_port"
            android:title="@string/activity_settings_port" />
        <org.deviceconnect.android.manager.setting.SwitchPreference
            android:key="@string/key_settings_event_keep_alive_on_off"
            android:defaultValue="true"
            android:summaryOff="@string/activity_settings_dconnect_disabled"
            android:summaryOn="@string/activity_settings_dconnect_enabled"
            android:title="@string/activity_settings_event_keep_alive_settings" />
    </PreferenceCategory>
</PreferenceScreen>